refactor: optimize swagger docs
