# api/method.go
@@ -25,9 +25,15 @@ type HTTPMethodResponse struct {
 
 func NewHttpMethod() *HttpMethod {
 	return &HttpMethod{}
-}
+}	
 
-
+//	@Summary		Get request returns a simple GET response
+//	@Description	Returns a simple GET response
+//	@Tags			http-methods
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	object
+//	@Router			/get [get]
 func (h *HttpMethod) HandleGet(c *gin.Context) {
 	scheme := "http"
 	if c.Request.TLS != nil {
@@ -47,6 +53,13 @@ func (h *HttpMethod) HandleGet(c *gin.Context) {
 }
 
 
+//	@Summary		Post request returns a POST response
+//	@Description	Returns a POST response
+//	@Tags			http-methods
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	object
+//	@Router			/post [post]
 func (h *HttpMethod) HandlePost(c *gin.Context) {
 	response := HTTPMethodResponse{
 		Args:   utils.ConvertQuery(c.Request.URL.Query()),
@@ -62,6 +75,13 @@ func (h *HttpMethod) HandlePost(c *gin.Context) {
 	c.JSON(http.StatusOK, response)
 }
 
+//	@Summary		Put request returns a PUT response
+//	@Description	Returns a PUT response
+//	@Tags			http-methods
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	object
+//	@Router			/put [put]
 func (h *HttpMethod) HandlePut(c *gin.Context) {
 	response := HTTPMethodResponse{
 		Args:    utils.ConvertQuery(c.Request.URL.Query()),
@@ -77,6 +97,13 @@ func (h *HttpMethod) HandlePut(c *gin.Context) {
 	c.JSON(http.StatusOK, response)
 }
 
+//	@Summary		Delete request returns a DELETE response
+//	@Description	Returns a DELETE response
+//	@Tags			http-methods
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	object
+//	@Router			/delete [delete]
 func (h *HttpMethod) HandleDelete(c *gin.Context) {
 	response := HTTPMethodResponse{
 		Args:   utils.ConvertQuery(c.Request.URL.Query()),
@@ -92,6 +119,13 @@ func (h *HttpMethod) HandleDelete(c *gin.Context) {
 	c.JSON(http.StatusOK, response)
 }
 
+//	@Summary		Patch request returns a PATCH response
+//	@Description	Returns a PATCH response
+//	@Tags			http-methods
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	object
+//	@Router			/patch [patch]
 func (h *HttpMethod) HandlePatch(c *gin.Context) {
 	response := HTTPMethodResponse{
 		Args:   utils.ConvertQuery(c.Request.URL.Query()),
